# chat

./: README.md  docker-compose.yml  er.drawio  名称未設定ファイル.drawio
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs
backend/src/api/: film.rs  mod.rs
frontend/: Dockerfile
