[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4"
diesel = "2.0.2"
dotenv = "0.15.0"
failure = "0.1.8"
r2d2 = "0.8.10"
serde = "1.0.147"
serde_json = "1.0.87"
uuid = "1.2.1"
